Change Dashboard template Logo

--- a/src/dashboard/templates/dashboard_home.html
+++ b/src/dashboard/templates/dashboard_home.html
@@ -175,7 +175,7 @@
                                 <a href="{% url 'book' %}" class="mat_link">
                                     <div class="youtube mat">
                                         <div class="mat_logo">
-                                            <img class="mat_icon" src="{% static 'images/youtube.svg' %}" alt="">
+                                            <img class="mat_icon" src="{% static 'images/research.svg' %}" alt="">
                                         </div>
                                         <div class="mat_overview">
                                             <h5 class="mat_title">Books</h5>
