--- a/src/account/templates/registration/profile.html
+++ b/src/account/templates/registration/profile.html
@@ -12,15 +12,19 @@
     <main class="profile_container">
         <div class="profile_page">
             <div class="profile_page_image">
-                <div class="profile_image_con" style="border-width: .2rem;">
-                    <img src="{{ page_user.profile_pix.url}}" style="width: 150px; height: 150px; border-radius: 50%;">
+                <div class="profile_image_con" style="border-width: .2rem;" >
+                    {% if page_user.profile_pix.url %}
+                        <img src="{{ page_user.profile_pix.url}}" style="width: 100px; height: 100px; border-radius: 50%;">
+                    {% else %}
+                        <img src="{% static 'images/profile.svg' %}" alt="Profile" style="width: 100px; height: 100px; border-radius: 50%;>
+                    {% endif %}
                 </div>
                 <div class="profile_image_text">
                     <p class="name">{{user.username}}</p>
                     <p class="dept">{{ page_user.department}}</p>
                 </div>
                 <div class="profile_btn">
-                    <a href="{% url 'update_profile' page_user.pk %}" class="setting btn">Setting</a>     
+                    <a href="{% url 'update_profile' page_user.pk %}" class="setting btn" >Setting</a>     
                 </div>
                 
             </div>
