--- a/src/dashboard/templates/materials.html
+++ b/src/dashboard/templates/materials.html
@@ -16,7 +16,7 @@
                 {% csrf_token %}
                 {{form}}
                 {% comment %} <input type="text" placeholder="Search for a Word"> {% endcomment %}
-                <input class="btn btn-danger" type="submit" value="Submit">
+                <input class="btn btn-danger" type="submit" value="Submit" style="width: 40%">
             </form><br>
         {% for result in results %}
             <a href="{{ result.preview }}" target="_blank">
